[package]
name = "grok-chat"
version = "0.1.0"
edition = "2024"
description = "MCP server for xAI Grok API — chat, vision, search, and embeddings"

[dependencies]
rmcp = { version = "0.8", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1"
thiserror = "2"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "6"
moka = { version = "0.12", features = ["future"] }

[dev-dependencies]
mockito = "1"
